packages/scrabble-solver/src/components/Results/Results.module.scss
@import 'styles/mixins';

$row-padding-horizontal: calc(var(--spacing--m) + var(--spacing--s));

.results {
  position: relative;
  display: flex;
  flex-direction: column;
  height: 100%;
  font-family: var(--font--family--title);
}

.emptyState {
  flex: 1;
}

.list {
  flex: 1 1 auto;
  transition: var(--transition);

  &.outdated {
    filter: blur(2px);
  }
}

.header {
  position: relative;
  z-index: 1;
  display: flex;
  align-items: center;
  justify-content: space-between;
  border-bottom: var(--border);
  font-weight: 700;
  overflow: auto;
}

.headerButton {
  @include button-reset;
  @include focus-effect;

  cursor: pointer;
  text-transform: uppercase;
  transition: var(--transition);
  padding: var(--spacing--s) 0;

  &:focus,
  &:hover {
    background-color: var(--color--primary);
    color: white;
  }
}

.headerButtonLabel {
  @include ellipsis;

  flex: 0 1 auto;
  text-align: left;

  [dir='rtl'] & {
    text-align: right;
  }
}

.result {
  @include button-reset;

  user-select: none;
  transition: var(--transition);
  cursor: pointer;
  font-weight: 400;

  &:focus,
  &:hover,
  &.highlighted {
    &:not(:disabled) {
      background-color: var(--color--primary);
      color: white;
    }
  }
}

.resultContent {
  display: flex;
  align-items: center;
  justify-content: space-between;

  .word {
    @include ellipsis;
  }
}

.cell {
  display: flex;
  align-items: center;
  justify-content: center;
  padding: 0 var(--spacing--s);
  gap: var(--spacing--s);

  .result &:first-child,
  .headerButton:first-child & {
    justify-content: flex-start;

    [dir='ltr'] & {
      padding-left: $row-padding-horizontal;
      text-align: left;
    }

    [dir='rtl'] & {
      padding-right: $row-padding-horizontal;
      text-align: right;
    }
  }

  .result &:last-child,
  .headerButton:last-child & {
    [dir='ltr'] & {
      padding-right: $row-padding-horizontal;
    }

    [dir='rtl'] & {
      padding-left: $row-padding-horizontal;
    }
  }

  &:last-child {
    flex: 1;
  }
}

.word {
  flex: 1 0 180px;
  text-transform: uppercase;
}

.stat {
  $width: 50px;

  flex: 0 0 $width;
  max-width: $width;
  justify-content: center;
}

.points {
  $width: 80px;

  flex: 1 0 $width;
  max-width: $width;
  font-weight: bold;
}

.solveButton {
  display: block;
  margin: var(--spacing--xl) auto 0;
}

.sortIcon {
  $size: 19px;

  flex: 0 0 auto;
  width: $size;
  height: $size;
}

.input {
  border-top: var(--border);
}

